Init project and display layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Hello World</title>
+    <title>Basketball Scoreboard</title>
+    <script defer src="./index.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Score</h1>
+    <div class="container">
+      <div class="score-box">
+        <h2>HOME</h2>
+        <div class="score">0</div>
+        <div class="score-actions">
+          <button>+1</button>
+          <button>+2</button>
+          <button>+3</button>
+        </div>
+      </div>
+      <div class="score-box">
+        <h2>GUEST</h2>
+        <div class="score">0</div>
+        <div class="score-actions">
+          <button>+1</button>
+          <button>+2</button>
+          <button>+3</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
