--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.cdnfonts.com/css/cursed-timer-ulil"
+      rel="stylesheet"
+    />
     <title>Basketball Scoreboard</title>
     <script defer src="./index.js"></script>
   </head>
   <body>
     <h1>Score</h1>
     <div class="container">
-      <div class="score-box">
+      <div>
         <h2>HOME</h2>
-        <div class="score">0</div>
-        <div class="score-actions">
+        <div id="home-score" class="score">0</div>
+        <div class="score-actions home">
           <button>+1</button>
           <button>+2</button>
           <button>+3</button>
         </div>
       </div>
-      <div class="score-box">
+      <div>
         <h2>GUEST</h2>
-        <div class="score">0</div>
-        <div class="score-actions">
+        <div id="guest-score" class="score">0</div>
+        <div class="score-actions guest">
           <button>+1</button>
           <button>+2</button>
           <button>+3</button>
