Change score board to a card

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
-    <h1>Score</h1>
+    <h1>Basketball Scoreboard</h1>
     <div class="container">
       <div>
         <h2>HOME</h2>
